--- a/server/boardcontents_template.html
+++ b/server/boardcontents_template.html
@@ -2,9 +2,9 @@
 It will be reloaded automatically from the server -->
 <div id="boardcontents_placeholder">
 	<!-- The title comes here -->
-	<div id="boardtitle_placeholder" class="boardtitle">Message board</div>
+	<div id="boardtitle_placeholder" class="boardtitle">%s</div>
     <input type="text" name="id" value="ID" readonly>
     <input type="text" name="entry" value="Entry" size="70%%" readonly>
     <!-- The entries come here -->
-    <!--%s-->
+    %s
 </div>
